--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "phpoffice/phpexcel": "^1.8",
         "swiftmailer/swiftmailer": "^5.4"
     },
+    "license": "MIT",
     "authors": [
         {
             "name": "Daniele Banfi",
