--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "autoload": {
-        "psr-0" : {
-            "IrideWeb" : "src/"
+        "psr-4" : {
+            "" : "src/"
         }
     },
     "minimum-stability": "dev"
