--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "slim/twig-view": "^2.1",
         "tecnickcom/tcpdf": "^6.2",
         "phpoffice/phpexcel": "^1.8",
-        "swiftmailer/swiftmailer": "^5.4"
+        "swiftmailer/swiftmailer": "^5.4",
+        "luism-s/multilingualslim": "dev-master"
     },
     "license": "MIT",
     "authors": [
