--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     	"php": ">=5.5.0",
         "slim/twig-view": "^2.1",
         "tecnickcom/tcpdf": "^6.2",
-        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpspreadsheet": "^1.1",
         "swiftmailer/swiftmailer": "^5.4",
         "luism-s/multilingualslim": "dev-master"
     },
